# live2d-automation

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_OPTIMIZATION_PLAN.md  README.md  mcp_config.json  pyproject.toml  requirements.txt  test_live2d_pipeline.py  test_optimized.py  test_simple.py
.github/workflows/: ci.yml
core/: bone_system.py  deformers.py  mesh_generator.py  parameter_system.py
docs/: native_gui_adapter_contract.md
mcp_server/: artifacts.py  cli.py  cubism_contracts.py  pipeline_services.py  schemas.py  secure_server_impl.py  server.py  session_store.py  validation.py
mcp_server/profiles/: windows_cubism_default.json
mcp_server/templates/: standard_bust_up.json
mcp_server/tools/: ai_part_detector.py  auto_rigger.py  cubism_automation.py  cubism_bridge.py  cubism_calibration.py  cubism_dispatch.py  cubism_preparation.py  export_validator.py  facial_detector.py  image_processor.py  layer_generator.py  moc3_generator.py  motion_generator.py  native_gui_controller.py  native_gui_runtime.py  native_gui_scripts.py  part_segmenter.py  physics_setup.py  psd_builder.py  segmentation.py  template_mapper.py
mcp_server/tools/part_detection_backends/: __init__.py  api_backend.py  base.py  heuristic_backend.py
scripts/: native_gui_adapter_demo.py
tests/: conftest.py  test_ai_part_pipeline.py  test_cli_workflow.py  test_cubism_automation_pipeline.py  test_cubism_contracts.py  test_cubism_preparation.py  test_cubism_psd_pipeline.py  test_native_gui_adapter_demo.py  test_server_security.py  test_session_store.py
