[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live2d-automation"
version = "0.1.0"
description = "Generate an intermediate Live2D package from a single character image."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Live2D Automation Team" }]
keywords = ["live2d", "mcp", "automation", "avatar", "animation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.4.0",
    "loguru>=0.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
vision-cpu = [
    "mediapipe>=0.10.0",
    "psd-tools>=1.9.0",
    "rembg>=2.0.0",
]
vision-gpu = [
    "mediapipe>=0.10.0",
    "onnxruntime-gpu>=1.16.0",
    "psd-tools>=1.9.0",
    "rembg>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
]
dev = [
    "black>=23.0.0",
    "mypy>=1.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
live2d-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/live2d-automation/live2d-automation"
Repository = "https://github.com/live2d-automation/live2d-automation"
Issues = "https://github.com/live2d-automation/live2d-automation/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*", "mcp_server", "mcp_server.*"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
(?x)(
    ^/output(?:/|$)
  | ^/\.pytest_tmp(?:/|$)
  | ^/pytest-cache-files-.*
  | ^/test_(live2d_pipeline|optimized|simple)\.py$
  | ^/core/deformers\.py$
)
'''

[tool.ruff]
line-length = 100
extend-exclude = [
    "output",
    "pytest-cache-files-*",
    "test_live2d_pipeline.py",
    "test_optimized.py",
    "test_simple.py",
    "core/deformers.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"mcp_server/secure_server_impl.py" = ["E402", "E501"]
"mcp_server/tools/auto_rigger.py" = ["E501"]
"mcp_server/tools/moc3_generator.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["output", ".git", ".mypy_cache", ".ruff_cache", ".pytest_tmp", "pytest-cache-files-*"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = '(?x)(^output(?:[\\/]|$)|^\.pytest_tmp(?:[\\/]|$)|^pytest-cache-files-.*|^test_(live2d_pipeline|optimized|simple)\.py$|^core[\\/]deformers\.py$)'